// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array/diff charactersDiff should detect additions and deletions correctly 1`] = `
Array [
  Object {
    "left": [1:1; 1:2) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": [2:2; 3:2) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": [3:4; 4:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [2:2; 3:1) @ string:right,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [3:3; 4:1) @ string:right,
  },
]
`;

exports[`array/diff charactersDiff should detect additions and deletions correctly 2`] = `
Array [
  Similarity {
    "left": [1:2; 2:2) @ string:left,
    "level": 1,
    "right": [1:1; 2:2) @ string:right,
  },
  Similarity {
    "left": [3:2; 3:4) @ string:left,
    "level": 1,
    "right": [3:1; 3:3) @ string:right,
  },
]
`;

exports[`array/diff charactersDiff should detect moves correctly 1 1`] = `
Array [
  Object {
    "left": [2:1; 2:4) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [1:1; 1:4) @ string:right,
  },
  Object {
    "left": [1:4; 2:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": [2:4; 3:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [1:4; 2:1) @ string:right,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [2:4; 3:1) @ string:right,
  },
]
`;

exports[`array/diff charactersDiff should detect moves correctly 2 1`] = `
Array [
  Object {
    "left": [2:1; 2:4) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [1:1; 1:4) @ string:right,
  },
  Object {
    "left": [1:4; 2:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [1:4; 2:2) @ string:right,
  },
]
`;

exports[`array/diff charactersDiff should detect moves correctly 3 1`] = `
Array [
  Object {
    "left": [2:4; 3:4) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [1:4; 2:4) @ string:right,
  },
  Object {
    "left": [3:4; 4:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [3:4; 4:1) @ string:right,
  },
]
`;

exports[`array/diff lineDiff should be able to compare strings directly 1`] = `
Array [
  Object {
    "left": [3:1; 4:1) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [2:1; 3:1) @ string:right,
  },
  Object {
    "left": [7:1; 8:1) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [4:1; 5:1) @ string:right,
  },
  Object {
    "left": [2:1; 3:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": [4:1; 5:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [1:1; 2:1) @ string:right,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [7:1; 8:1) @ string:right,
  },
]
`;

exports[`array/diff lineDiff should be able to compare strings directly 2`] = `
Array [
  Object {
    "left": [4:1; 7:1) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [4:1; 7:1) @ string:right,
  },
  Object {
    "left": [7:1; 10:1) @ string:left,
    "level": "Textual",
    "operation": "Delete",
    "right": undefined,
  },
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [1:1; 4:1) @ string:right,
  },
]
`;

exports[`array/diff lineDiff should be possible to use no weight 1`] = `
Array [
  Object {
    "left": [3:1; 4:1) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [2:1; 3:1) @ string:right,
  },
]
`;

exports[`array/diff lineDiff should consider line weight 1`] = `
Array [
  Object {
    "left": [2:1; 3:1) @ string:left,
    "level": "Textual",
    "operation": "Move",
    "right": [3:1; 4:1) @ string:right,
  },
]
`;

exports[`array/diff lineDiff should produce good quality diff 1`] = `
Array [
  Object {
    "left": undefined,
    "level": "Textual",
    "operation": "Add",
    "right": [3:1; 7:1) @ file://diffless/tests/fixtures/patience/after.c,
  },
]
`;
